Fix the apparition of a line appearing mid-page on mobile

--- a/_includes/styles/layout.scss
+++ b/_includes/styles/layout.scss
@@ -53,7 +53,7 @@
     position: sticky;
     top: 20px;
     align-self: flex-start;
-    max-height: calc(100vh - 20px);
+    max-height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     gap: 20px;
